# selfuse_opencv_projects

kalman/: CMakeLists.txt  conanfile.txt
kalman/bat/: build.bat
kalman/c++/: CMakeLists.txt
kalman/python/: pyproject.toml
kalman/python/data/: dollar.txt
kalman/python/src/: main.py
kalman/src/: main.cpp
lib/opencv/install/: setup_vars_opencv4.cmd
lib/opencv/install/x64/mingw/lib/: OpenCVConfig.cmake
lib/opencv/install/x64/mingw/lib/pkgconfig/: opencv4.pc
project1/src/: colorPicker.cpp  main.cpp
project2/: CMakeLists.txt
project2/src/: main.cpp
project3/bat/: build.bat
project3/src/: main.cpp
